--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/images"
+              "src/images",
+              "src/docs"
             ],
             "styles": [
               "node_modules/bootstrap/scss/bootstrap.scss",
